--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     nomodule
     src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
   ></script>
-  <script type="module" src="/src/index.js"></script>
+  <!-- <script type="module" src="/src/index.js"></script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
